spec/e2e/variable/use_nil_as_var.lit
# error: [line 2] Syntax error at "nil": I was expecting a variable name here.
var nil = "value"
